--- a/conference/TechSummit-2021/XDP-insights-2021.org
+++ b/conference/TechSummit-2021/XDP-insights-2021.org
@@ -200,7 +200,7 @@ Focus on BPF for networking
  - /TC-BPF/ hooks are *equally important* for practical use-cases
  - BPF hooks for cgroups can also be useful for containers
 
-** Slide: What is XDP?                                              :export:
+* Slide: What is XDP?                                                :export:
 
 XDP (eXpress Data Path) is a Linux *in-kernel* fast-path
  - /New programmable layer in-front/ of traditional network stack
@@ -212,6 +212,12 @@ XDP (eXpress Data Path) is a Linux *in-kernel* fast-path
  - Very /early access/ to frame (in driver code *after DMA sync*)
  - Ability to */skip/ (large parts) of kernel /code/*
    - Evolve XDP via /BPF-helpers/
+
+** Slide: XDP architecture                                          :export:
+#+ATTR_HTML: :class img-no-border
+[[file:images/xdp_architecture.png]]
+
+
 
 * Emacs end-tricks                                                 :noexport:
 
