--- a/conference/TechSummit-2021/XDP-insights-2021.org
+++ b/conference/TechSummit-2021/XDP-insights-2021.org
@@ -333,6 +333,15 @@ Drivers /without/ *SKB* knowledge
  - based only on =xdp_frame=
  - Depend on both XDP-hints + XDP multi-buff
 
+* Slide: End: /Questions?/                                           :export:
+:PROPERTIES:
+:reveal_extra_attr: class="mid-slide"
+:END:
+
+Resources:
+ - XDP-project - [[https://github.com/xdp-project/][GitHub.com/xdp-project]]
+   - Get an easy start with [[https://github.com/xdp-project/bpf-examples][xdp-project/bpf-examples]]
+
 * Emacs end-tricks                                                 :noexport:
 
 This section contains some emacs tricks, that e.g. remove the "Slide:" prefix
