--- a/conference/TechSummit-2021/XDP-insights-2021.org
+++ b/conference/TechSummit-2021/XDP-insights-2021.org
@@ -254,7 +254,7 @@ XDP (eXpress Data Path) is a Linux *in-kernel* fast-path
    - Read, modify, drop, redirect or pass
    - For L2-L3 use-cases: seeing x10 performance improvements!
  - *Avoiding* /memory allocations/
-   - No SKB allocations and no-init (only zeroes 4 cache-lines per pkt)
+   - No SKB allocations and no-init (SKB zeroes 4 cache-lines per pkt)
  - Adaptive *bulk* processing of frames
  - Very /early access/ to frame (in driver code *after DMA sync*)
  - Ability to */skip/ (large parts) of kernel /code/*
