TechSummit-2021: Slide: Taming BPF superpowers - not easy
Add a more positive spin on slide.

Signed-off-by: Jesper Dangaard Brouer <brouer@redhat.com>

--- a/conference/TechSummit-2021/XDP-insights-2021.org
+++ b/conference/TechSummit-2021/XDP-insights-2021.org
@@ -188,7 +188,8 @@ Some */quick advice/* to follow
 :END:
 
 /BPF superpowers/ - *not easy to use* - */sorry/*
- - Taming and learning is challenging
+ - Gain kernel level building block, that can be safely updated runtime
+ - Taming and learning-curve is challenging
 
 BPF makes extending Kernel /easier/ *than Kernel modules*
  - *Don't confuse this with "easy to use"*
