TechSummit-2021: Slide: BPF development is hard
Mention Mental model again, as I've seen people have a hard time
doing this mind-shift of been able to develop kernel-mode applications
that run kernel-side.

Signed-off-by: Jesper Dangaard Brouer <brouer@redhat.com>

--- a/conference/TechSummit-2021/XDP-insights-2021.org
+++ b/conference/TechSummit-2021/XDP-insights-2021.org
@@ -197,6 +197,7 @@ BPF makes extending Kernel /easier/ *than Kernel modules*
 ** Slide: BPF development is hard                                   :export:
 
 Know this: *BPF development is hard*
+ - *Mental model* mind-shift: Coding "/kernel-mode applications/"
  - Requires understanding internal kernel functions
  - Available BPF /features/ depend on LLVM *compiler versions*
  - Developers will experience: /Verfier/ */rejecting/* programs
